# ChangeLog for dev-ruby/ruby-gstreamer
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gstreamer/ChangeLog,v 1.72 2015/01/17 10:42:04 graaff Exp $

  17 Jan 2015; Hans de Graaff <graaff@gentoo.org> ruby-gstreamer-2.0.2.ebuild,
  ruby-gstreamer-2.1.0.ebuild, ruby-gstreamer-2.2.0.ebuild,
  ruby-gstreamer-2.2.3.ebuild:
  Update gstreamer dependencies to the correct slot, fixing bug 536206.

*ruby-gstreamer-2.2.3 (05 Dec 2014)

  05 Dec 2014; Naohiro Aota <naota@gentoo.org> +ruby-gstreamer-2.2.3.ebuild:
  version bump

  21 Jun 2014; Hans de Graaff <graaff@gentoo.org> ruby-gstreamer-2.2.0.ebuild:
  Add missing build dependency on gobject-introspection, fixing bug 513970.

  21 May 2014; Manuel Rüger <mrueg@gentoo.org> ruby-gstreamer-1.1.8.ebuild,
  ruby-gstreamer-1.2.6.ebuild:
  Remove ruby18 target.

*ruby-gstreamer-2.2.0 (15 Mar 2014)

  15 Mar 2014; Naohiro Aota <naota@gentoo.org> +ruby-gstreamer-2.2.0.ebuild:
  version bump

  10 Mar 2014; Manuel Rüger <mrueg@gentoo.org> -ruby-gstreamer-1.1.3.ebuild,
  ruby-gstreamer-1.1.8.ebuild, ruby-gstreamer-1.2.6.ebuild:
  Cleanup old. Remove ree18

*ruby-gstreamer-2.1.0 (15 Jan 2014)

  15 Jan 2014; Naohiro Aota <naota@gentoo.org> +ruby-gstreamer-2.1.0.ebuild:
  version bump

*ruby-gstreamer-2.0.2 (05 Dec 2013)

  05 Dec 2013; Naohiro Aota <naota@gentoo.org> +ruby-gstreamer-2.0.2.ebuild:
  version bump

  17 Aug 2013; Agostino Sarubbo <ago@gentoo.org> ruby-gstreamer-1.1.8.ebuild:
  Stable for ppc, wrt bug #480974

  17 Aug 2013; Agostino Sarubbo <ago@gentoo.org> ruby-gstreamer-1.1.8.ebuild:
  Stable for x86, wrt bug #480974

  17 Aug 2013; Agostino Sarubbo <ago@gentoo.org> ruby-gstreamer-1.1.8.ebuild:
  Stable for amd64, wrt bug #480974

  14 Aug 2013; Hans de Graaff <graaff@gentoo.org> -ruby-gstreamer-1.0.3.ebuild,
  -ruby-gstreamer-1.1.4.ebuild, -ruby-gstreamer-1.1.5.ebuild,
  -ruby-gstreamer-1.1.6.ebuild:
  Cleanup.

*ruby-gstreamer-1.2.6 (04 May 2013)