@@ -1,15 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-AUX tuxmathscrabble-7.4-gentoo.patch 3154 SHA256 0e9ae4107036cd53221fb8f22c2b7dd7cb5b50050799a84291f9bf51a19cd3d3 SHA512 05a7d8948032900f7e0efa33b98a8dae48f8c0531349948d07f090fa14cd6d7ec307521ed09f545acee34378130a0439f386118d57ff6ce6604a9b506655c76a WHIRLPOOL 21bbdacbed6bf5e3317dac6f9051263a4112d939c741b8b0bc670ee728bd939e4d2cda1010d65769aaf8764c6b1569403e03d16d6ff386672f3fcd364552c12d
+AUX tuxmathscrabble-0.7.4-gentoo.patch 3154 SHA256 0e9ae4107036cd53221fb8f22c2b7dd7cb5b50050799a84291f9bf51a19cd3d3 SHA512 05a7d8948032900f7e0efa33b98a8dae48f8c0531349948d07f090fa14cd6d7ec307521ed09f545acee34378130a0439f386118d57ff6ce6604a9b506655c76a WHIRLPOOL 21bbdacbed6bf5e3317dac6f9051263a4112d939c741b8b0bc670ee728bd939e4d2cda1010d65769aaf8764c6b1569403e03d16d6ff386672f3fcd364552c12d
 DIST tuxmathscrabble-0.7.4.zip 7705680 SHA256 ab1d8daf817581ec8d55641432845127f014c5711fc7e9ed01145216d3619879 SHA512 a990a19f5480d5e5a3221d9f8e11b205b1885199b358ff5403d1dd51947ede34ebc898bfb22f7104e69026727bc717460b192ee6d684f91e40525f950b14dbc2 WHIRLPOOL cb5b3b3eb89e027d9a5aee444755383f726923cdb64714ce09da749eeae2215d8eedc6e782fbc1c62ce04e9be15543406eb684f984a600aaac5c0c52f425e6bf
-EBUILD tuxmathscrabble-7.4-r1.ebuild 1408 SHA256 9b82c10ae0bd4f6a112dc18635d511f593cc7415f45bceb8f9b454af1235111e SHA512 21634cea7b7a7ec627494d0d3bdbcb852a7f33eaaba2c6aaff4961e9f24d91a559efb7617a1d69d43d5dc5783ae5b7aa1c22b0289a9eea3c381b2b667234fad0 WHIRLPOOL 74b0e8f77d92a21d9b17736c80d148956dd5d18bceaeb240bac6a277e9b54f0521e4a6ffa2ed5d22acb85ec69075621b238cbbbed046a3f1c297b5a512ff968e
-MISC ChangeLog 2908 SHA256 1e4bb51a9cf16d32db61b14cb94b3d018cea9fc6aa1dda3194b5d9c24b9529e5 SHA512 7d6005f91927bd56dc25dd0e235617051caa62f6c640eee07481041108c7ca7ff4ca29257aadc54c8d36622281da95abb408aeff39ee61b3c19cbfc8ce44f57d WHIRLPOOL 36ba6f4a6202057b61ab7f1072080da4632954ac2beb360a780eb0b8f91c68d900935a1ed7ce7a0c3827c3c4a76727122146151067878eb51ee5b2ee671a3b5a
+EBUILD tuxmathscrabble-0.7.4.ebuild 1363 SHA256 8ebd48959b24a207a0700693df40c6fcd518e9099251eae717e37e72966c912c SHA512 98e0f89e52b32600a005b2594b19d52cd073ae7eff35fe6033939c10e94b24cfe5bf98b748c0de7d2b39323ac045b6d7b47a19f9d3910645337098ea76887f13 WHIRLPOOL ffe159fddf777d69266e028833614ce8effd137380ef64f87336db485280d39ffc36208ade412694575ce87175cd2804762bbce1325293826231a37748a83acd
+MISC ChangeLog 3205 SHA256 8e460596740e3417d6e51b2f83066f68c63559fbe41923fec41208142cdf0a72 SHA512 834739f0779915da9c7fa4cc166264ab9d13f35eacc76e756d6e6ea308e7d2507b62b12af4b48db0eb00131ece80107ac2d0787b5f4a7b0f7f395d403d5e7a19 WHIRLPOOL f04fdf928562d5cdfb77d638de59e6964a1d6d4c7b0180889b674a6062acbddb9f0ddc44abad55233628a78c14f0570e5b7ad70a28621cd21f52e281cbc14e33
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlTPs7UACgkQIY77eQFFFC2h7wCgr3iBxEdsFc3olp+CSXoLA1Ia
-gjAAoNuy8bzOD7wcUvoUjRSxSpihvr3b
-=r1Zf
+iEYEAREIAAYFAlTQ/eQACgkQIY77eQFFFC0P7ACg3oajXTXIZ/kjWYqlREQJ7hlE
+zsgAoIBAVtEhVUF41MToTu9R/T41N1RO
+=n464
 -----END PGP SIGNATURE-----
