@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=media-libs/gstreamer:1.0 media-libs/gst-plugins-base:1.0 ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ) virtual/pkgconfig ruby_targets_ruby19? ( dev-ruby/pkg-config[ruby_targets_ruby19] ) ruby_targets_ruby20? ( dev-ruby/pkg-config[ruby_targets_ruby20] )
-DESCRIPTION=Ruby GStreamer bindings
-EAPI=5
-HOMEPAGE=http://ruby-gnome2.sourceforge.jp/
-IUSE=elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 test
-KEYWORDS=~amd64 ~ppc ~x86
-LICENSE=Ruby
-RDEPEND=media-libs/gstreamer:1.0 media-libs/gst-plugins-base:1.0 ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] )
-REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 )
-SLOT=0
-SRC_URI=mirror://sourceforge/ruby-gnome2/ruby-gnome2-all-2.1.0.tar.gz
-_eclasses_=eutils	998e5931fb95b10a6a11ec796ada2759	java-utils-2	f02d3e4777b404c719a5a6479c37c6e3	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	d4f8591e9b20b106327e9d143eb13da5	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	ruby-ng-gnome2	4463aca8669af6fafcca7f9f1f7fdbd5	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=9ac643acd3f07490e1a664631fe0f0c6
