@@ -1,6 +1,14 @@
 # ChangeLog for games-kids/tuxmathscrabble
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-kids/tuxmathscrabble/ChangeLog,v 1.21 2015/02/02 17:28:20 tupone Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-kids/tuxmathscrabble/ChangeLog,v 1.22 2015/02/03 16:57:03 tupone Exp $
+
+*tuxmathscrabble-0.7.4 (03 Feb 2015)
+
+  03 Feb 2015; Tupone Alfredo <tupone@gentoo.org>
+  +tuxmathscrabble-0.7.4.ebuild, -tuxmathscrabble-7.4-r1.ebuild,
+  +files/tuxmathscrabble-0.7.4-gentoo.patch,
+  -files/tuxmathscrabble-7.4-gentoo.patch:
+  Change numbering schema following upstream numbering
 
   02 Feb 2015; Tupone Alfredo <tupone@gentoo.org> -tuxmathscrabble-7.4.ebuild,
   tuxmathscrabble-7.4-r1.ebuild:
