@@ -1,6 +1,13 @@
 # ChangeLog for dev-ruby/ruby-gstreamer
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gstreamer/ChangeLog,v 1.72 2015/01/17 10:42:04 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-gstreamer/ChangeLog,v 1.73 2015/02/03 16:54:57 pacho Exp $
+
+*ruby-gstreamer-2.2.4 (03 Feb 2015)
+
+  03 Feb 2015; Pacho Ramos <pacho@gentoo.org> +ruby-gstreamer-2.2.4.ebuild,
+  -ruby-gstreamer-1.2.6.ebuild, -ruby-gstreamer-2.0.2.ebuild,
+  -ruby-gstreamer-2.1.0.ebuild, -ruby-gstreamer-2.2.0.ebuild:
+  Version bump, drop old
 
   17 Jan 2015; Hans de Graaff <graaff@gentoo.org> ruby-gstreamer-2.0.2.ebuild,
   ruby-gstreamer-2.1.0.ebuild, ruby-gstreamer-2.2.0.ebuild,
